# openev

./: 00_START_HERE.md  ADVANCED_SPECIFICATION.md  ARCHITECTURE_DIAGRAMS.md  COMPLETE_SUMMARY.md  Dockerfile  FINANCIAL_FIRMS_ANALYSIS.md  FIRM_PROFILES.md  IMPLEMENTATION_GUIDE.md  INDEX.md  QUICK_REFERENCE.md  README.md  advanced_baseline_agents.py  advanced_evaluation_framework.py  advanced_multimarket_env.py  app.py  bloomberg_adapter.py  client.py  demo.py  eaa_engine.py  energy_scaler.py  environment.py  fpga_scheduler.py  greenarb-apollo-deployment.yaml  inference.py  models.py  openenv.yaml  orchestrator.py  pyproject.toml  requirements.txt  simulate_grader.py  trl_integration.py
dashboard/: index.html  script.js  style.css
server/: app.py  environment.py  grader.py  models.py  swarm.py
