[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openev"
version = "1.0.0"
description = "OpenEnv Arbitrage Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.1",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
ml = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "trl>=0.8.0"
]

[project.scripts]
serve = "server.app:main"
