[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openev"
version = "2.0.0"
description = "OpenEnv CyberGuard Code Review Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.12.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
serve  = "server.app:main"
start  = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
